Add gridsearch with neural networks and elastic net

--- a/lightgbm_model.ipynb
+++ b/lightgbm_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,12 +14,12 @@
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.pipeline import Pipeline\n",
     "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV, StratifiedKFold\n",
-    "from sklearn.metrics import r2_score\n",
+    "from sklearn.model_selection import TimeSeriesSplit, cross_val_score, GridSearchCV\n",
+    "from sklearn.metrics import r2_score, mean_absolute_error, mean_squared_error\n",
     "from lightgbm import LGBMRegressor\n",
+    "from sklearn.neural_network import MLPRegressor\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import itertools"
+    "import seaborn as sns"
    ]
   },
   {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
     "\n",
     "    knn_imputer = KNNImputer(n_neighbors=1)\n",
     "\n",
-    "    X = np.round(knn_imputer.fit_transform(df_processed))\n",
+    "    X = knn_imputer.fit_transform(df_processed)\n",
     "\n",
     "    df_processed = pd.DataFrame(X, columns = df_processed.columns)\n",
     "\n",
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,155 +130,409 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 98,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "X = df_processed.drop(['Date', 'Next_Tmin', 'Next_Tmax'], axis = 1)\n",
-    "Y = df_processed['Next_Tmax']"
+    "### Feature Engineering\n",
+    "\n",
+    "- Extract some informations from Date column"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "numeric_data = list(X.columns)\n",
-    "numeric_data.remove('station')\n",
-    "categoric_data = ['station']"
+    "# Month\n",
+    "df_processed['month'] = df_processed.Date.dt.month\n",
+    "\n",
+    "# Day of month\n",
+    "df_processed['day_of_month'] = df_processed.Date.dt.day\n",
+    "\n",
+    "# Day of week\n",
+    "df_processed['day_of_week'] = df_processed.Date.dt.day_name()\n",
+    "\n",
+    "# Year: for data split purpose only\n",
+    "df_processed['year'] = df_processed.Date.dt.year"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feature Selection\n",
+    "\n",
+    "- Remove features with low correlation with Next_Tmax: |corr| < 0.15\n",
+    "- Remove Date"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# split categoric and numeric data\n",
+    "numeric_data = list(set(df_processed.columns) - set(['station', 'month', 'day_of_month', 'day_of_week', 'year']))\n",
+    "categoric_data = ['station', 'month', 'day_of_month', 'day_of_week']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Pipeline(steps=[('preprocessor',\n",
-       "                 ColumnTransformer(transformers=[('cat_scale', OneHotEncoder(),\n",
-       "                                                  ['station']),\n",
-       "                                                 ('num_scale', MinMaxScaler(),\n",
-       "                                                  ['Present_Tmax',\n",
-       "                                                   'Present_Tmin',\n",
-       "                                                   'LDAPS_RHmin', 'LDAPS_RHmax',\n",
-       "                                                   'LDAPS_Tmax_lapse',\n",
-       "                                                   'LDAPS_Tmin_lapse',\n",
-       "                                                   'LDAPS_WS', 'LDAPS_LH',\n",
-       "                                                   'LDAPS_CC1', 'LDAPS_CC2',\n",
-       "                                                   'LDAPS_CC3', 'LDAPS_CC4',\n",
-       "                                                   'LDAPS_PPT1', 'LDAPS_PPT2',\n",
-       "                                                   'LDAPS_PPT3', 'LDAPS_PPT4',\n",
-       "                                                   'lat', 'lon', 'DEM', 'Slope',\n",
-       "                                                   'Solar radiation'])])),\n",
-       "                ('lgb', LGBMRegressor())],\n",
-       "         verbose=1)"
+       "['lat',\n",
+       " 'LDAPS_PPT1',\n",
+       " 'Solar radiation',\n",
+       " 'lon',\n",
+       " 'Slope',\n",
+       " 'Date',\n",
+       " 'Next_Tmin',\n",
+       " 'Next_Tmax']"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "transformers=[('cat_scale', OneHotEncoder(), categoric_data),\n",
-    "             ('num_scale', MinMaxScaler(), numeric_data)]\n",
-    "\n",
-    "preprocessor = ColumnTransformer(transformers=transformers)\n",
-    "\n",
-    "lgb = LGBMRegressor()\n",
-    "\n",
-    "steps = [('preprocessor', preprocessor),\n",
-    "        ('lgb', lgb)]\n",
-    "\n",
-    "lgb_model = Pipeline(steps=steps, verbose=1)\n",
-    "lgb_model"
+    "# identify columns with low correlation\n",
+    "corrMatrix = df_processed[numeric_data].corr()\n",
+    "columns_to_drop = list(corrMatrix[(np.absolute(corrMatrix['Next_Tmax']) < 0.15)]['Next_Tmax'].index)\n",
+    "columns_to_drop = columns_to_drop + ['Date', 'Next_Tmin', 'Next_Tmax']\n",
+    "columns_to_drop"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.3, random_state=42)"
+    "X = df_processed.drop(columns_to_drop, axis = 1)\n",
+    "y = df_processed['Next_Tmax']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numeric_data = list(set(numeric_data) - set(columns_to_drop))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data partitioning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class AnualTimeSeriesSplit():\n",
+    "    def __init__(self, first_year, n_years):\n",
+    "        self.n_splits = n_years\n",
+    "        self.first_year = first_year\n",
+    "    \n",
+    "    def get_n_splits(self, X, y, groups):\n",
+    "        return self.n_splits\n",
+    "    \n",
+    "    def split(self, X, y=None, groups=None):\n",
+    "        n_samples = len(X)\n",
+    "        indices = np.arange(n_samples)\n",
+    "        for i in range(self.n_splits):\n",
+    "            start = 0\n",
+    "            mid = X[X['year'] == self.first_year + i].index[-1] + 1\n",
+    "            stop = X[X['year'] == self.first_year + i + 1].index[-1] + 1\n",
+    "            yield indices[start: mid], indices[mid: stop]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6185"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# SPLIT_ID = int(len(y)*0.7)\n",
+    "# set SPLIT_ID by the end of the first 4 years on the dataset\n",
+    "SPLIT_ID = X[X['year'] != 2017].index[-1] + 1\n",
+    "SPLIT_ID"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = X.iloc[:SPLIT_ID]\n",
+    "y_train = y.iloc[:SPLIT_ID]\n",
+    "\n",
+    "X_test = X.iloc[SPLIT_ID:]\n",
+    "y_test = y.iloc[SPLIT_ID:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tscv = TimeSeriesSplit(n_splits=4)\n",
+    "atscv = AnualTimeSeriesSplit(first_year=2013, n_years=3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model creation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_model(model=LGBMRegressor()):\n",
+    "    transformers=[('cat_scale', OneHotEncoder(), categoric_data),\n",
+    "                ('num_scale', MinMaxScaler(), numeric_data)]\n",
+    "\n",
+    "    preprocessor = ColumnTransformer(transformers=transformers)\n",
+    "\n",
+    "    steps = [('preprocessor', preprocessor),\n",
+    "            ('model', model)]\n",
+    "\n",
+    "    model_pipeline = Pipeline(steps=steps, verbose=False)\n",
+    "    return model_pipeline\n",
+    "\n",
+    "lgb_model = build_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores = cross_val_score(lgb_model, X_train, y_train, cv=atscv, scoring='r2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Pipeline] ...... (step 1 of 2) Processing preprocessor, total=   0.0s\n",
-      "[Pipeline] ............... (step 2 of 2) Processing lgb, total=   0.1s\n"
+      "R2 score: 0.698 (+/- 0.104)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"R2 score: {0:.3f} (+/- {1:.3f})\".format(scores.mean(), scores.std()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### LightGBM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gridParams = {\n",
+    "    'model__learning_rate': [0.01, 0.1],\n",
+    "    'model__n_estimators': [24,50,75,100],\n",
+    "    'model__num_leaves': [8,12,16,31,48,72], # large num_leaves helps improve accuracy but might lead to over-fitting\n",
+    "    'model__random_state' : [42],\n",
+    "    'model__subsample' : [0.5, 0.7, 1],\n",
+    "    'model__reg_alpha' : [1,1.2],\n",
+    "    'model__reg_lambda' : [1,1.2,1.4],\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = build_model()\n",
+    "gs = GridSearchCV(model, param_grid=gridParams, cv=atscv, scoring='r2', return_train_score=True, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 864 candidates, totalling 2592 fits\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Pipeline(steps=[('preprocessor',\n",
-       "                 ColumnTransformer(transformers=[('cat_scale', OneHotEncoder(),\n",
-       "                                                  ['station']),\n",
-       "                                                 ('num_scale', MinMaxScaler(),\n",
-       "                                                  ['Present_Tmax',\n",
-       "                                                   'Present_Tmin',\n",
-       "                                                   'LDAPS_RHmin', 'LDAPS_RHmax',\n",
-       "                                                   'LDAPS_Tmax_lapse',\n",
-       "                                                   'LDAPS_Tmin_lapse',\n",
-       "                                                   'LDAPS_WS', 'LDAPS_LH',\n",
-       "                                                   'LDAPS_CC1', 'LDAPS_CC2',\n",
-       "                                                   'LDAPS_CC3', 'LDAPS_CC4',\n",
-       "                                                   'LDAPS_PPT1', 'LDAPS_PPT2',\n",
-       "                                                   'LDAPS_PPT3', 'LDAPS_PPT4',\n",
-       "                                                   'lat', 'lon', 'DEM', 'Slope',\n",
-       "                                                   'Solar radiation'])])),\n",
-       "                ('lgb', LGBMRegressor())],\n",
-       "         verbose=1)"
+       "GridSearchCV(cv=<__main__.AnualTimeSeriesSplit object at 0x000001F0E5CCC070>,\n",
+       "             estimator=Pipeline(steps=[('preprocessor',\n",
+       "                                        ColumnTransformer(transformers=[('cat_scale',\n",
+       "                                                                         OneHotEncoder(),\n",
+       "                                                                         ['station',\n",
+       "                                                                          'month',\n",
+       "                                                                          'day_of_month',\n",
+       "                                                                          'day_of_week']),\n",
+       "                                                                        ('num_scale',\n",
+       "                                                                         MinMaxScaler(),\n",
+       "                                                                         ['LDAPS_RHmax',\n",
+       "                                                                          'LDAPS_WS',\n",
+       "                                                                          'LDAPS_PPT2',\n",
+       "                                                                          'LDAPS_PPT4',\n",
+       "                                                                          'DEM',\n",
+       "                                                                          'LDAPS_LH',\n",
+       "                                                                          'LDAPS_PPT3',\n",
+       "                                                                          'LDAPS_CC1',\n",
+       "                                                                          '...\n",
+       "                                                                          'LDAPS_Tmin_lapse',\n",
+       "                                                                          'LDAPS_Tmax_lapse',\n",
+       "                                                                          'LDAPS_CC3'])])),\n",
+       "                                       ('lgb', LGBMRegressor())]),\n",
+       "             param_grid={'lgb__learning_rate': [0.01, 0.1],\n",
+       "                         'lgb__n_estimators': [24, 50, 75, 100],\n",
+       "                         'lgb__num_leaves': [8, 12, 16, 31, 48, 72],\n",
+       "                         'lgb__random_state': [42], 'lgb__reg_alpha': [1, 1.2],\n",
+       "                         'lgb__reg_lambda': [1, 1.2, 1.4],\n",
+       "                         'lgb__subsample': [0.5, 0.7, 1]},\n",
+       "             return_train_score=True, scoring='r2', verbose=True)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lgb_model.fit(X_train, Y_train)"
+    "gs.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Y_pred = lgb_model.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8778592987148331"
+       "Pipeline(steps=[('preprocessor',\n",
+       "                 ColumnTransformer(transformers=[('cat_scale', OneHotEncoder(),\n",
+       "                                                  ['station', 'month',\n",
+       "                                                   'day_of_month',\n",
+       "                                                   'day_of_week']),\n",
+       "                                                 ('num_scale', MinMaxScaler(),\n",
+       "                                                  ['LDAPS_RHmax', 'LDAPS_WS',\n",
+       "                                                   'LDAPS_PPT2', 'LDAPS_PPT4',\n",
+       "                                                   'DEM', 'LDAPS_LH',\n",
+       "                                                   'LDAPS_PPT3', 'LDAPS_CC1',\n",
+       "                                                   'LDAPS_CC2', 'LDAPS_CC4',\n",
+       "                                                   'LDAPS_RHmin',\n",
+       "                                                   'Present_Tmax',\n",
+       "                                                   'Present_Tmin',\n",
+       "                                                   'LDAPS_Tmin_lapse',\n",
+       "                                                   'LDAPS_Tmax_lapse',\n",
+       "                                                   'LDAPS_CC3'])])),\n",
+       "                ('lgb',\n",
+       "                 LGBMRegressor(random_state=42, reg_alpha=1.2, reg_lambda=1,\n",
+       "                               subsample=0.5))])"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "r2_score(Y_test, Y_pred)"
+    "gs.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test R2 Score: 0.663\n",
+      "Test RMSE Score: 1.828\n",
+      "Test MAE Score: 1.333\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "model = build_model(LGBMRegressor(random_state=42, reg_alpha=1.2, reg_lambda=1,\n",
+    "                               subsample=0.5))\n",
+    "# train model\n",
+    "model.fit(X_train, y_train)\n",
+    "# test score\n",
+    "y_predicted = model.predict(X_test)\n",
+    "r2 = r2_score(y_test, y_predicted, multioutput='uniform_average')\n",
+    "rmse = mean_squared_error(y_test, y_predicted, squared=False)\n",
+    "mae = mean_absolute_error(y_test, y_predicted)\n",
+    "print(\"Test R2 Score: {0:.3f}\".format(r2))\n",
+    "print(\"Test RMSE Score: {0:.3f}\".format(rmse))\n",
+    "print(\"Test MAE Score: {0:.3f}\".format(mae))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Neural Networks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MLPReg(random_state=42)"
    ]
   },
   {
