Add more comments to notebooks

--- a/model_creation.ipynb
+++ b/model_creation.ipynb
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pre-processing"
+    "### Pré-processamento"
    ]
   },
   {
@@ -133,7 +133,7 @@
    "source": [
     "### Feature Engineering\n",
     "\n",
-    "- Extract some informations from Date column"
+    "- Extrair informações de mês, dia e ano da feature ```Date```"
    ]
   },
   {
@@ -161,9 +161,9 @@
    "source": [
     "### Feature Selection\n",
     "\n",
-    "- Remove features with low correlation with Next_Tmax: |corr| < 0.15\n",
-    "- Remove Date\n",
-    "- Separe numeric data from categoric data"
+    "- Remover features com baixa correlação com ```Next_Tmax``` -> $|corr| < 0.15$\n",
+    "- Remove ```Date``` e ```Next_Tmin```\n",
+    "- Separar colunas numéricas de categóricas"
    ]
   },
   {
@@ -231,7 +231,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data partitioning"
+    "### Partição dos dados\n",
+    "\n",
+    "- Partição dos dados de treino e teste 70/30\n",
+    "- Criação de uma técnica de cross validation que considera os dados anuais, visto que os dados estão situados entre os mês de junho e agosto, essa pode ser uma boa abordagem."
    ]
   },
   {
@@ -312,7 +315,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model creation"
+    "## Criação dos modelos\n",
+    "\n",
+    "- Pipeline para tratamento dos dados\n",
+    "- Busca de hiperparâmetros utilizando GridSearchCV\n",
+    "- Modelos selecionados: LightGBM, Redes Neurais e Elastic Net. Todos esses estimadores foram selecionados após pesquisa sobre modelos simples com melhor desempenho para séries temporais. \n",
+    "\n",
+    "### Pipeline para treinamento e teste dos modelos\n",
+    "\n",
+    "- Aplicação de One Hot Encoding para dados categóricos\n",
+    "- Aplicação de MinMaxScaler para os dados numéricos. Estes atributos ficarão numa escala de valores entre 0 e 1."
    ]
   },
   {
@@ -343,6 +355,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# testing cross_val_score with personalized time series split\n",
     "scores = cross_val_score(lgb_model, X, y, cv=atscv, scoring='r2')"
    ]
   },
@@ -369,6 +382,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# dict to save metrics for late comparison\n",
     "RMSE_values = {}\n",
     "r2_values = {}\n",
     "MAE_values = {}"
@@ -538,7 +552,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Neural Networks"
+    "### Redes Neurais"
    ]
   },
   {
@@ -857,7 +871,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model comparison"
+    "## Comparação dos modelos\n",
+    "\n",
+    "### $R^2$\n",
+    "\n",
+    "Esta métrica é utilizada para medir o desempenho do modelo em porcentagem. Por muitas vezes é comparada à acurácia em problemas de classificação."
    ]
   },
   {
@@ -897,6 +915,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### RMSE (Root Mean Squared Error)\n",
+    "\n",
+    "Essa métrica é utilizada para identificar o erro em modelos de regressão e é sensível a *outliers*, conseguindo considerar melhor o desempenho dos modelos quanto a grandes erros. Sua medida é dada de acordo com a unidade do atributo alvo. Quanto menor o valor dessa métrica, melhor é o desempenho do modelo."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 51,
    "metadata": {},
@@ -930,6 +957,15 @@
     "model_names = list(RMSE_values.keys())\n",
     "sns.barplot(x=model_accuracies, y=model_names)\n",
     "plt.title('RMSE for Regressors (Maximum Temperature)')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MAE (Mean Absolute Error)\n",
+    "\n",
+    "Essa métrica é também é utilizada para identificar o erro em modelos de regressão e já não é tão sensível a grandes erros. Essa métrica foi escolhida como forma de comparação à métrica RMSE. Uma diferença grande entra essas duas pode significar uma alta presença de *outliers* na previsão."
    ]
   },
   {
